# CVTools

./: .gitignore  README.md  color_to_gray.py  data_define.py  data_split.py  inference.py  perspective_transformation.py  pyproject.toml  random_selection.py  show_image.py  video2image.py
